fix for tois no longer inline on mobile

--- a/styles/less/style.less
+++ b/styles/less/style.less
@@ -409,8 +409,11 @@ MEDIA
       top:0;
       left:0;
       width:100%;
-      ul.type-of-initiative {
-        position:static;
+      ul#map-menu {
+        ul.type-of-initiative {
+          position:static;
+
+        }
       }
       div#mobileShowMap {
         display:block;
